<resources>
    <string name="app_name">AWallet</string>
    <string name="web_client_id">169096346302-hib7v65rs4s0hclm6k22mvo6rscisgtv.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Vista en desarrollo</string>

    <string name="btn_add">Ir</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_edit">Editar</string>
    <string name="monetary_value_default">$0.00</string>

    <string name="bills_list_fragment">Lista de egreso</string>
    <string name="add_bill_fragment">Agregar egreso</string>
    <string name="fragment_list_earnings">Lista de ingresos</string>
    <string name="add_earning_fragment">Agregar ingreso</string>
    <string name="add_earning_category_fragment">Agregar categoría de ingreso</string>
    <string name="add_bill_category_fragment">Agregar categoría de egreso</string>

    <string name="fragment_add_earning_category_name_error">Ingrese un nombre de categoría válido</string>

    <string name="fragment_add_earning_name">Ingrese un nombre del ingreso</string>
    <string name="fragment_add_earning_price">Ingresar monto del ingreso</string>
    <string name="fragment_add_earning_name_error">Ingrese un nombre de ingreso válido</string>
    <string name="fragment_add_earning_price_error">Ingrese un monto válido</string>

    <string name="menu_category_expenses">Categoría de egresos</string>
    <string name="menu_category_earnings">Categoría de ingresos</string>
    <string name="menu_expenses">Mis egresos</string>
    <string name="menu_earnings">Mis ingresos</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="setting_section">Configuración</string>

    <string name="fragment_add_bill_title">Ingresar nombre de egreso</string>
    <string name="fragment_add_bill_price">Ingresar monto egresado</string>
    <string name="fragment_add_bill_category">Seleccionar categoría</string>
    <string name="fragment_add_bill_description">Ingresar descripción (Opcional)</string>
    <string name="fragment_add_bill_button">Guardar</string>
    <string name="fragment_add_bill_title_error">Ingrese un título válido</string>
    <string name="fragment_add_bill_price_error">Ingrese un monto válido</string>
    <string name="fragment_add_bill_category_error">Seleccione una categoría válida</string>

    <string name="fragment_create_bill_category_name">Ingresar nombre de categoría</string>
    <string name="fragment_create_bill_category_color">Ingresar color de categoría</string>
    <string name="fragment_create_bill_category_btn">Crear</string>
    <string name="fragment_create_bill_category_name_error">Ingrese un nombre de categoría válido</string>

    <string name="fragment_create_earning_category_name">Ingresar nombre de categoría</string>
    <string name="fragment_create_earning_category_color">Ingresar color de categoría</string>
    <string name="fragment_create_earning_category_btn">Crear</string>

    <string name="login_fragment_title">Bienvenido a AWallet</string>
    <string name="login_fragment_error">Ha ocurrido un error en el proceso de login</string>
    <string name="login_fragment_success">Espere un momento… lo estamos redirigiendo</string>

    <string name="bill_category_item_list">Fecha de creación:</string>

    <string name="empty_list_message">No hay datos por mostrar</string>

    <string name="on_boarding_title_one">Bienvendi@</string>
    <string name="on_boarding_title_two">Categorías</string>
    <string name="on_boarding_title_three">Ingresos</string>
    <string name="on_boarding_title_four">Gastos</string>
    <string name="on_boarding_title_five">Gráficos estadísticos</string>
    <string name="on_boarding_content_one">Muchas gracias por unirte a nuestra aplicación, te ayudaremos a encontrar tu equilibrio financiero</string>
    <string name="on_boarding_content_two">Podrás clasificar tus ingresos y gastos para tener un mayor control de tu dinero actual</string>
    <string name="on_boarding_content_three">Es prácticamente el dinero activo que tienes en tus cuentas de ahorros, crédito y préstamos</string>
    <string name="on_boarding_content_four">Son todas los pasivos(deudas) que ya has pagado o posiblemente en un futuro</string>
    <string name="on_boarding_content_five">Visualmente se mostrarán gráficos para observar tus movimientos financieros de manera general y específica</string>
    <string name="on_boarding_start">Comenzar</string>

    <string name="item_list_name_object">Nombre:</string>
    <string name="item_list_date_object">Fecha de creación:</string>

    <string name="login_title">Estamos muy felices de verte por acá</string>
    <string name="login_scubtitle">Manejamos tus datos de finanzas con seguridad</string>
    <string name="login_contet">Inicia sesión fácilmente con tu cuenta de Google.</string>

    <string name="success_add_data_message">Registro creado exitosamente</string>
    
    <string name="home_fragment_title">Resumen del mes de </string>
    <string name="home_earning_title">Ingresos</string>
    <string name="home_bills_title">Gastos</string>

    <string name="item_delete_dialog">¿Estas seguro de eliminar este elemento?</string>
    <string name="item_delete_dialog_option_one">Sí, eliminar</string>
    <string name="item_delete_dialog_option_two">No</string>
</resources>