<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_nav"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.llopez.awallet.ui.login.LoginFragment"
        android:label="@string/login_fragment_title"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.llopez.awallet.ui.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/listBillsFragment"
        android:name="com.llopez.awallet.ui.list_bills.ListBillsFragment"
        android:label="@string/bills_list_fragment"
        tools:layout="@layout/fragment_list_bills">
        <action
            android:id="@+id/action_listBillsFragment_to_addBillFragment"
            app:destination="@id/addBillFragment" />
    </fragment>
    <fragment
        android:id="@+id/addBillFragment"
        android:name="com.llopez.awallet.ui.add_bill.AddBillFragment"
        android:label="@string/add_bill_fragment"
        tools:layout="@layout/fragment_add_bill" />
    <fragment
        android:id="@+id/listEarningsFragment"
        android:name="com.llopez.awallet.ui.list_earnings.ListEarningsFragment"
        android:label="@string/fragment_list_earnings"
        tools:layout="@layout/fragment_list_earnings" >
        <action
            android:id="@+id/action_listEarningsFragment_to_addEarningFragment"
            app:destination="@id/addEarningFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEarningFragment"
        android:name="com.llopez.awallet.ui.add_earning.AddEarningFragment"
        android:label="@string/add_earning_fragment"
        tools:layout="@layout/fragment_add_earning" />
    <fragment
        android:id="@+id/billCategoryListFragment"
        android:name="com.llopez.awallet.ui.list_category_bills.BillCategoryListFragment"
        android:label="@string/menu_category_expenses"
        tools:layout="@layout/fragment_bill_category_list" >
        <action
            android:id="@+id/action_billCategoryListFragment_to_createBillCategoryFragment"
            app:destination="@id/createBillCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/earningCategoryListFragment"
        android:name="com.llopez.awallet.ui.list_category_earnings.EarningCategoryListFragment"
        android:label="@string/menu_category_earnings"
        tools:layout="@layout/fragment_earning_category_list" >
        <action
            android:id="@+id/action_earningCategoryListFragment_to_createEarningCategoryFragment"
            app:destination="@id/createEarningCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/createBillCategoryFragment"
        android:name="com.llopez.awallet.ui.add_bill_category.CreateBillCategoryFragment"
        android:label="@string/add_bill_category_fragment"
        tools:layout="@layout/fragment_create_bill_category" />
    <fragment
        android:id="@+id/createEarningCategoryFragment"
        android:name="com.llopez.awallet.ui.add_earning_category.CreateEarningCategoryFragment"
        android:label="@string/add_earning_category_fragment"
        tools:layout="@layout/fragment_create_earning_category" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.llopez.awallet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
</navigation>